--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.47.0",
     "react-loader-spinner": "^5.4.5",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
+    "@types/nodemailer": "^6.4.13",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
@@ -49,6 +53,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "prisma": "^5.1.1",
+    "react-icons": "^4.11.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
