--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
