--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.6.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mantine/hooks": "^7.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.4",
+    "immer": "^10.0.3",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.0.0",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
@@ -41,7 +49,9 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.44.2",
+    "@types/multer": "^1.4.10",
     "@types/node": "^18.16.0",
     "@types/nodemailer": "^6.4.13",
     "@types/react": "^18.2.20",
@@ -49,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.6.2",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.5.4",
     "postcss": "^8.4.27",
